from pathlib import Path
from typing import Protocol


class TapeDrive(Protocol):
    def load_tape(self, tape_id: str) -> None: ...

    def unload_tape(self) -> None: ...

    def current_tape_id(self) -> str: ...

    def remaining_capacity_bytes(self) -> int: ...

    def write_file(self, source_path: Path, destination_name: str) -> None: ...

    def write_bytes(self, destination_name: str, data: bytes) -> None: ...

    def read_file(self, name: str) -> bytes: ...

    def list_files(self) -> list[str]: ...
